--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,28 @@ services:
       - "80:80"
     depends_on:
       - mysql
-
+  web-client:
+    build:
+      context: ./web-client
+      dockerfile: Dockerfile
+    ports:
+      - "8080:3000"
+    expose:
+      - "3000"
+    volumes:
+      - ./web-client:/opt/app:delegated
+      # bind-mounting these two files in will let you add packages during development without rebuilding
+      # for example, to add bower to your app while developing, just install it inside the container
+      # and then nodemon will restart. Your changes will last until you "docker-compose down" and will
+      # be saved on host for next build
+      # docker-compose exec node npm install --save bower
+      - ./web-client/package.json:/opt/package.json
+      - ./web-client/package-lock.json:/opt/package-lock.json
+      # this is a workaround to prevent host node_modules from accidently getting mounted in container
+      # in case you want to use node/npm both outside container for test/lint etc. and also inside container
+      # this will overwrite the default node_modules dir in container so it won't conflict with our
+      # /opt/node_modules location. Thanks to PR from @brnluiz
+      - notused:/opt/app/node_modules
 secrets:
   db_root_password:
     file: db_root_password.txt
@@ -39,6 +60,7 @@ secrets:
 
 volumes:
   mysql-data:
+  notused:
 
 networks:
   default:
