--- a/web-client/package.json
+++ b/web-client/package.json
@@ -11,6 +11,7 @@
     "react": "^16.4.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^16.4.2",
+    "react-paginate": "^8.0.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
